syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

service Goriyak {
    rpc RegisterNode(Node) returns (Status){}
    rpc DeleteNode(Node) returns (Status){}
    rpc Login(Node) returns (Status){}
    rpc PostTransactionFromClient(TransactionRequest) returns (Status){}
    rpc GetBlock(BlockRequest) returns (Block){} 
    rpc PostMiningResult(MiningResult) returns (Status){}
}

service Admin {
    rpc PostBlock(MiningResult) returns (Status){}
    rpc PostTransactionFromServer(Transaction) returns (Status){}
}

// confirm between server
message Transaction {
    string name = 1;
    string send_node_id = 2;
    string receive_node_id = 3;
    double amount = 4;
    string status = 5;
    google.protobuf.Timestamp created_at = 6;
}

// post from client to server
message TransactionRequest {
    string node_name = 1;
    string password = 2;
    string name = 3;
    string send_node_id = 4;
    string receive_node_id = 5;
    double amount = 6;
    google.protobuf.Timestamp created_at = 7;
}

// for confirm node
message Node {
    string name = 1;
    string password = 2;
}

// request for start mining
message BlockRequest {}

// for mining
message Block {
    message Transaction {
        string id = 1;
        string send_node_id = 2;
        string receive_node_id = 3;
        double amount = 4;
        google.protobuf.Timestamp created_at = 5;
    }
    string id = 1;
    repeated Transaction transactions = 2;
    google.protobuf.Timestamp started_at = 3;
    google.protobuf.Timestamp finished_at = 4;
    repeated string sign = 5;
    string previous_hash = 6;
    string nonce = 7;
    google.protobuf.Timestamp created_at = 8;
    string difficulty = 9;
}

// post from client to server
message MiningResult {
    string block_id = 1;
    string hash = 2;
    string nonce = 3;
    repeated string sign = 4;
    string name = 5; // name of mined node
}

// uses only in response
message Status {
    string message = 1;
}